修改多数据源中的配置错误，并修改默认数据源为datasource1。忘记添加配置文件，添加配置文件。

--- a/springComing-admin/src/main/resources/application.yml
+++ b/springComing-admin/src/main/resources/application.yml
@@ -15,7 +15,7 @@ spring:
     username: root
     password: 123456
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://39.97.176.170:3306/springcoming?characterEncoding=utf8&useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
+    url: jdbc:mysql://39.97.176.170:3306/springcoming-slave?characterEncoding=utf8&useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
 
 
   # 试图解析器
