--- a/springComing-admin/src/main/resources/application.yml
+++ b/springComing-admin/src/main/resources/application.yml
@@ -1,22 +1,21 @@
 spring:
   datasource1:
-    # MySQL database configuration.
-    # driver-class-name: com.mysql.jdbc.Driver
-    username: root
-    password: 123456
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    # url: jdbc:mysql://39.97.176.170:3306/springcoming?characterEncoding=utf8&useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
-    # url和jdbc的区别
-    url: jdbc:mysql://39.97.176.170:3306/springcoming?characterEncoding=utf8&useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
+    druid:
+      # MySQL database configuration.
+      # driver-class-name: com.mysql.jdbc.Driver
+      username: root
+      password: 123456
+      driver-class-name: com.mysql.cj.jdbc.Driver
+      url: jdbc:mysql://39.97.176.170:3306/springcoming?characterEncoding=utf8&useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
+      # url: jdbc:mysql://39.97.176.170:3306/springcoming?characterEncoding=utf8&useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
+      # url和jdbc的区别
 
   datasource2:
-    # MySQL database configuration.
-    # driver-class-name: com.mysql.jdbc.Driver
-    username: root
-    password: 123456
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://39.97.176.170:3306/springcoming-slave?characterEncoding=utf8&useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
-
+    druid:
+      username: root
+      password: 123456
+      driver-class-name: com.mysql.cj.jdbc.Driver
+      url: jdbc:mysql://39.97.176.170:3306/springcoming-slave?characterEncoding=utf8&useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
 
   # 试图解析器
   mvc:
