--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
     <spring.boot.version>2.2.0.RELEASE</spring.boot.version>
     <mysql.version>8.0.12</mysql.version>
     <hutool.version>5.2.3</hutool.version>
+    <lombok.version>1.16.16</lombok.version>
   </properties>
 
   <!--  控制版本  -->
@@ -62,6 +63,13 @@
         <artifactId>UserAgentUtils</artifactId>
         <version>${user.agent.version}</version>
       </dependency>
+
+      <dependency>
+        <groupId>org.projectlombok</groupId>
+        <artifactId>lombok</artifactId>
+        <version>${lombok.version}</version><!--版本号自己选一个就行-->
+      </dependency>
+
     </dependencies>
   </dependencyManagement>
 
