--- a/springComing-admin/pom.xml
+++ b/springComing-admin/pom.xml
@@ -97,6 +97,11 @@
       <artifactId>jstl</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+    </dependency>
+
   </dependencies>
 
 
